<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    >

    <LinearLayout
        android:paddingBottom="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/titulo_menu_principal"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="sans-serif-black"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:letterSpacing=".15"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/colorBlack"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/selectModulo"
            android:textSize="18sp" />

        <TextView
            android:fontFamily="sans-serif-condensed-light"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/uniQuindio" />
        <TextView
            android:fontFamily="sans-serif-condensed-light"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/programaIngE" />
        <TextView
            android:fontFamily="sans-serif-condensed-light"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/electrae" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        >

        <Button
            android:id="@+id/btnPanel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_menu_principal"
            android:drawableLeft="@drawable/ic_left_panel_solar"
            android:letterSpacing=".1"
            android:paddingLeft="5dp"
            android:text="@string/moduloPanel"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnInversor"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_menu_principal"
            android:drawableLeft="@drawable/ic_left_inversor"
            android:letterSpacing=".1"
            android:paddingLeft="5dp"
            android:text="@string/moduloInversor"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnControlador"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_menu_principal"
            android:drawableLeft="@drawable/ic_left_controlador"
            android:letterSpacing=".1"
            android:paddingLeft="5dp"
            android:text="@string/moduloControlador"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>